really fix scaling layout?

--- a/main.kv
+++ b/main.kv
@@ -18,7 +18,7 @@
 <GameArea>:
     orientation: 'horizontal'
     size_hint: self.num_letters/7.2, None
-    size: self.width, self.width / self.num_letters * 9
-    center: Window.center
 
 GameScreen:
+    anchor_x: 'center'
+    anchor_y: 'center'
