game over text formatting

--- a/main.kv
+++ b/main.kv
@@ -54,6 +54,8 @@
             text_size: root.width, None
             size: self.texture_size
             halign: 'center'
+            markup: True
+            font_size: '24sp'
 
 ScreenManager:
     id: screen_manager
