add a share button

--- a/main.kv
+++ b/main.kv
@@ -38,24 +38,33 @@
             Line:
                 rectangle: self.x, self.y, self.width, self.width / root.num_letters
                 width: 5
-    BoxLayout:
-        id: game_over
-        orientation: 'vertical'
-        opacity: 0
-        background_color: 0, 0, 0, 0.75
-        canvas.before:
-            Color:
-                rgba: self.background_color
-            Rectangle:
-                size: self.size
-                pos: self.pos
-        Label:
-            id: game_over_label
-            text_size: root.width, None
-            size: self.texture_size
-            halign: 'center'
-            markup: True
-            font_size: '24sp'
+
+<GameOver>:
+    id: game_over
+    orientation: 'vertical'
+    opacity: 1
+    background_color: 0, 0, 0, 0.75
+    canvas.before:
+        Color:
+            rgba: self.background_color
+        Rectangle:
+            size: self.size
+            pos: self.pos
+    Label:
+        id: game_over_label
+        text_size: root.width, None
+        size: self.texture_size
+        halign: 'center'
+        markup: True
+        font_size: '24sp'
+    Button:
+        font_size: '24sp'
+        size_hint: None, None
+        width: self.texture_size[0] + dp(10)
+        height: self.texture_size[1] + dp(10)
+        text: 'Share'
+        on_press: root.share()
+        pos_hint: {'center_x': .5, 'center_y': .5}
 
 ScreenManager:
     id: screen_manager
